# jam

./: .gitignore  README.md  pyproject.toml
examples/: convnext_flax.py  mvp_flax.py  mvp_flax_demo.py  nfnet_flax.py  nfnet_flax_demo.py  nfnet_haiku.py  nfnet_haiku_demo.py  r3m_haiku.py  r3m_haiku_demo.py  resnet_flax.py  resnet_flax_demo.py  resnet_haiku.py  resnet_haiku_demo.py
examples/imagenet/: augment.py  input_pipeline.py  train_convnext.py  train_nfnet.py  train_resnet.py
examples/imagenet/configs/: imagenette_convnext.py  imagenette_nfnet.py  imagenette_resnet.py
scripts/: download_and_convert.py
src/jam/: checkpoints.py  imagenet_util.py  model_zoo.py
src/jam/flax/: common.py  nfnet.py  r3m.py
src/jam/flax/convnext/: __init__.py  convert_torch_checkpoint.py  convnext.py
src/jam/flax/resnet/: __init__.py  convert_torch_checkpoint.py  resnet.py
src/jam/flax/vit/: mvp_flax.py
src/jam/haiku/: nfnet.py  r3m.py
src/jam/haiku/resnet/: __init__.py  convert_torch_checkpoint.py  resnet.py
src/jam/models/nfnet/: checkpoints.py  nfnet_flax.py  nfnet_haiku.py
src/jam/models/r3m/: checkpoints.py  r3m_flax.py  r3m_haiku.py
src/jam/models/resnet/: import_resnet_flax.py  import_resnet_haiku.py  resnet_flax.py
src/jam/models/vit/: import_vit.py  mvp_flax.py
src/jam/scripts/: download_and_convert.py
src/jam/utils/: checkpoint_utils.py
src/jrm/: checkpoint.py
src/jrm/models/: r3m.py  resnet.py
src/jrm/scripts/: convert_mvp_weights.py  convert_r3m_weights.py  download_mvp_checkpoints.sh  download_nfnets_checkpoints.sh  download_r3m_checkpoints.sh
src/jrm/utils/: checkpoint_importer.py  import_resnet.py  import_vit.py
src/nfnets/: base.py  nfnet.py
tests/: mvp_test.py  nfnet_test.py  r3m_test.py  resnet_test.py
tests/integration/: convnext_test.py  mvp_test.py  nfnet_test.py  r3m_test.py  resnet_test.py  utils.py
tests/unit/: common_test.py  convnext_flax_test.py  nfnet_flax_test.py
